--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ feedgenerator = "^2.1.0"
 feedparser = "^6.0.10"
 python-dateutil = "^2.8.2"
 python-dotenv = "^1.0.0"
+dependency-injector = "^4.41.0"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
