--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,8 +38,8 @@ jobs:
         run: |
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
-          git add .
-          git commit -m "update feeds"
+          git add ./output/comic.xml
+          git commit -m "update comic feed"
           git push origin main
 
   update_fdv:
@@ -57,8 +57,8 @@ jobs:
         run: |
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
-          git add .
-          git commit -m "update feeds"
+          git add ./output/fediverse.xml
+          git commit -m "update fediverse feed"
           git push origin main
 
   update_booru:
@@ -76,8 +76,8 @@ jobs:
         run: |
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
-          git add .
-          git commit -m "update feeds"
+          git add ./output/booru.xml
+          git commit -m "update booru feeds"
           git push origin main
     
   update_kmn:
@@ -95,6 +95,6 @@ jobs:
         run: |
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
-          git add .
-          git commit -m "update feeds"
+          git add ./output/kemono.xml
+          git commit -m "update kemono feeds"
           git push origin main
