--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -24,16 +24,26 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # update_nitter:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions/setup-python@v4
-  #       with:
-  #         python-version: "3.11"
-  #     - uses: Gr1N/setup-poetry@v8
-  #     - run: poetry install --no-root
-  #     - run: POCKET_TOKEN=${{secrets.POCKET_TOKEN}} POCKET_CONSUMER_KEY=${{secrets.POCKET_CONSUMER_KEY}} PCLOUD_USERNAME=${{secrets.PCLOUD_USERNAME}} PCLOUD_PASSWORD=${{secrets.PCLOUD_PASSWORD}} poetry run python main.py nitter
+  update_nitter:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - uses: Gr1N/setup-poetry@v8
+      - run: poetry install --no-root
+      - run: RAINDROP_TOKEN=${{secrets.RAINDROP_TOKEN}} RAINDROP_COMIC=${{secrets.RAINDROP_NITTER}} poetry run python main.py nitter
+      - name: Update feed
+        continue-on-error: true
+        run: |
+          git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
+          git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
+          git fetch origin main
+          git merge origin/main
+          git add ./output/nitter.xml
+          git commit -m "update comic feed"
+          git push origin main
 
   update_cmc:
     runs-on: ubuntu-latest
@@ -121,7 +131,7 @@ jobs:
 
   deploy:
     if: ${{ always() }}
-    needs: [update_cmc, update_fdv, update_booru, update_kmn]
+    needs: [update_cmc, update_fdv, update_booru, update_kmn, update_nitter]
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
