--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ feedgenerator = "^2.1.0"
 feedparser = "^6.0.10"
 python-dateutil = "^2.8.2"
 python-dotenv = "^1.0.0"
-dependency-injector = "^4.41.0"
+injector = "^0.21.0"
+playwright = "^1.42.0"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
