--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dateutil = "^2.8.2"
 python-dotenv = "^1.0.0"
 injector = "^0.21.0"
 playwright = "^1.42.0"
+dropbox = "^11.36.2"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
